[TASK/BUG] Added CSS/Fixed horizontal scrollbar on transition

--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   position: relative;
+  overflow-x: hidden;
 }
 .l_main--scroll {
   min-height: auto;
